--- a/nki-experience.html
+++ b/nki-experience.html
@@ -23,28 +23,28 @@
 <p> In Januari 2020, I had finish My Diploma Study at Universiti Teknologi Mara, Machang, Kelantan. During my diploma study I not just focused on academic but I also involved and take part in non academic which is joining some club. </p>
 <p>I have joining charity club which is iCare Malaysia and College Volunteer Club which is Jawatankuasa Perwakilan Kolej Dato Onn, Session 2018/2019. But, I would like to share about College Volunteer Club because a lot of experience I got from this club.</p>
 
-<center><img style="border:4px dotted" src="picture/ex-1.jpg" width="600px" height="400px"> 
+<center><img style="border:4px dotted" src="picture/ex-1.JPG" width="600px" height="400px"> 
 </center>
 <p> This is my team members in Jawatankuasa Perwakilan Kolej Dato Onn, Session 18/19. There are 15 of us who are have different portfolio need to performed and we make it as our responsiblitity. We are assign to take care of student at college needs and help all them if having problem in college. We also need to plan and doing some event for all student at college or outside UiTM Kelantan. 
 
-<center><img style="border:4px dotted" src="picture/ex-2.jpg" width="700px" height="400px"> 
+<center><img style="border:4px dotted" src="picture/ex-2.JPG" width="700px" height="400px"> 
 </center>
 
 <p>This is a group of student which is we called "Sekretrariat Kolej Dato Onn" who are volunteer to help us in doing some activity in college. Mostly, if we are having or doing a event for all the student, they will involved to help. We will divided in some group to performed the task before, during and after event. Each of teams will take our own responsiblilty to do every task as required for having a good and smooth event. </p>
 
 <p> Below is one of the event that we do outside UiTM Kelantan. We had went to SK Ipoh, Tanah Merah, Kelantan to meet and doing some activity with some of special kids that study at Prasekolah Kanak-Kanak Khas, SK Ipoh. 
 
-<center><img style="border:4px dotted" src="picture/ex-3.jpg" width="600px" height="400px"> 
+<center><img style="border:4px dotted" src="picture/ex-3.JPG" width="600px" height="400px"> 
 </center>
 <br>
-<center><img style="border:4px dotted" src="picture/ex-5.jpg" width="600px" height="400px"> 
+<center><img style="border:4px dotted" src="picture/ex-5.JPG" width="600px" height="400px"> 
 </center>
 <br>
-<center><img style="border:4px dotted" src="picture/ex-6.jpg" width="600px" height="400px"> 
+<center><img style="border:4px dotted" src="picture/ex-6.JPG" width="600px" height="400px"> 
 </center>
 <p> In this event, 25 volunteer involve to satisfied it. We are doing a lot of activity that involved the special kids interact each other and with us. For example, we divided students in some group and each group will have one fasilitator to guide them in arrange the number and need to be count after that.</p>
 <br>
-<center><img style="border:4px dotted" src="picture/ex-4.jpg" width="400px" height="400px"> 
+<center><img style="border:4px dotted" src="picture/ex-4.JPG" width="400px" height="400px"> 
 </center>
 
 <p>During this event, I have been assigned to be as the informal emcee event. I have learned a lot when I being the informal emcee for the event because I can interact will all the special kids and give them enjoyable while playing the games we provided. Other than having experience to interact with them, I also can improved my communication skill when facing a lot of people. Become a informal emcee is some a good practice to be more confident when communicate or giving instruction. </p>
