--- a/nki-gallery.html
+++ b/nki-gallery.html
@@ -110,7 +110,7 @@
 	<table border="0" width="500" cellpadding="15" cellspacing="0" align="center" bgcolor="black"> 
 		<tr>
 			<td>
-				<img src="picture/g-dip1.jpg" width="100%" alt="team"  />
+				<img src="picture/g-dip1.JPG" width="100%" alt="team"  />
 
 			</td>
 		</tr>
@@ -165,7 +165,7 @@
 	<table border="0" width="500" cellpadding="15" cellspacing="0" align="center" bgcolor="white"> 
 		<tr>
 			<td>
-				<img src="picture/g-dip5.jpg" width="100%" alt="team"  />
+				<img src="picture/g-dip5.JPG" width="100%" alt="team"  />
 
 			</td>
 		</tr>
@@ -179,7 +179,7 @@
 	<table border="0" width="500" cellpadding="15" cellspacing="0" align="center" bgcolor="orange"> 
 		<tr>
 			<td>
-				<img src="picture/g-dip6.jpg" width="100%" alt="team"  />
+				<img src="picture/g-dip6.JPG" width="100%" alt="team"  />
 
 			</td>
 		</tr>
@@ -249,7 +249,7 @@
 	<table border="0" width="500" cellpadding="15" cellspacing="0" align="center" bgcolor="white"> 
 		<tr>
 			<td>
-				<img src="picture/g-jpk5.jpg" width="100%" alt="team"  />
+				<img src="picture/g-jpk5.JPG" width="100%" alt="team"  />
 
 			</td>
 		</tr>
